--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+#bodyGrid {
+    text-align: center;
+    display: grid;
+    background-color: #AAAAAA;
+    border: 0.5em;
+    padding: 0.5em;
+    grid-template-areas: "firstHeader"
+        "navigation"
+        "mainSection"
+        "secondarySection"
+        "sportSection"
+        "referralSection";
+}
+
 #cookies {
     position: fixed;
     border: 1px solid #444444
