--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,9 @@
 }
 #body {
     font-family: 'Roboto Slab', sans-serif, 'arial', 'Berlin Sans';
-    text-align: center;
     display: grid;
     background-color: #AAAAAA;
+    justify-content: center;
     border: 0.5em;
     padding: 0.5em;
     grid-template-areas: "firstHeader"
@@ -14,7 +14,8 @@
         "mainSection"
         "secondarySection"
         "sportSection"
-        "referralSection";
+        "referralSection"
+        "contactSection";
 }
 
 #cookies {
