--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,15 @@
     justify-content: center;
     border: 0.5em;
     padding: 0.5em;
-    grid-template-areas: "firstHeader"
-        "navigation"
-        "mainSection"
-        "secondarySection"
-        "sportSection"
-        "referralSection"
-        "contactSection";
+    grid-template-areas: "firstHeaderTag"
+        "navigationTag"
+        "mainSectionTag"
+        "secondarySectionTag"
+        "sportSectionTag"
+        "referralSectionTag"
+        "contactSectionTag"
+        "footerTag"
+        "cookiesTag";
 }
 
 #cookies {
