--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,15 @@
         "cookiesTag";
 }
 
+#video {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -9999;
+}
+
 #cookies {
     position: fixed;
     border: 1px solid #444444;
